--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             --success-color: #27ae60;
             --danger-color: #e74c3c;
             --light-bg: #f8f9fa;
-            --dark-text: #2c3e50;
+            --dark-text:#BF407E;
             --border-color: #ddd;
             --shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
