--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             --success-color: #27ae60;
             --danger-color: #e74c3c;
             --light-bg: #f8f9fa;
-            --dark-text:#BF407E;
+            --dark-text:#2C3E50;
             --border-color: #ddd;
             --shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #667eea 0%, #667eea 100%);
             min-height: 100vh;
             color: var(--dark-text);
         }
