--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #667eea 100%);
+            background: linear-gradient(135deg, #2c5aa0 0%,  #2c5aa0 100%);
             min-height: 100vh;
             color: var(--dark-text);
         }
