--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         :root {
-            --primary-color: #2c5aa0;
+            --primary-color: #C83797;
             --secondary-color: #4a90e2;
             --accent-color: #f39c12;
             --success-color: #27ae60;
@@ -25,7 +25,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #2c5aa0 0%,  #2c5aa0 100%);
+            background: linear-gradient(135deg, #C83797 0%, #C83797 100%);
             min-height: 100vh;
             color: var(--dark-text);
         }
